[gd_scene load_steps=18 format=3 uid="uid://dtr2poygeam3r"]

[ext_resource type="PackedScene" uid="uid://dbn7ie0btp67a" path="res://Managers/wave_manager.tscn" id="1_6yxuh"]
[ext_resource type="Script" path="res://Scenes/Game_init.gd" id="1_osw0d"]
[ext_resource type="PackedScene" uid="uid://6xyp8od12xnf" path="res://Managers/character_manager.tscn" id="2_rdbr4"]
[ext_resource type="PackedScene" uid="uid://br78a2mb5hrnq" path="res://Managers/round_manager.tscn" id="3_s7syv"]
[ext_resource type="PackedScene" uid="uid://ogcxhkkfsmdi" path="res://Managers/ability_manager.tscn" id="5_d0xog"]
[ext_resource type="PackedScene" uid="uid://dwvx2fyx0esdi" path="res://Managers/map_manager.tscn" id="5_rckfc"]
[ext_resource type="PackedScene" uid="uid://slvbxmwh715i" path="res://Managers/combat_manager.tscn" id="6_cvaja"]
[ext_resource type="PackedScene" uid="uid://dp5x3sacbjiw3" path="res://Managers/interaction_manager.tscn" id="7_nglgl"]
[ext_resource type="PackedScene" uid="uid://d1kqyjpf6ntbw" path="res://Abilities/Utility/explosion.tscn" id="8_x8nt6"]
[ext_resource type="PackedScene" uid="uid://ccxvywf5fenkh" path="res://Managers/item_manager.tscn" id="11_r5jx1"]
[ext_resource type="Shader" path="res://Shaders/fog_shader.gdshader" id="22_0mhy5"]
[ext_resource type="Script" path="res://Managers/CinematicManager.gd" id="22_beavb"]
[ext_resource type="PackedScene" uid="uid://c8ikvo6rnmtyw" path="res://Utility/boss_title.tscn" id="23_vhcc8"]

[sub_resource type="Gradient" id="Gradient_cfxw4"]
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_c85ul"]
noise_type = 5

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_7m1hr"]
width = 1920
height = 1080
invert = true
seamless = true
color_ramp = SubResource("Gradient_cfxw4")
noise = SubResource("FastNoiseLite_c85ul")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cxvlt"]
shader = ExtResource("22_0mhy5")
shader_parameter/density = 0.13
shader_parameter/speed = Vector2(0.02, 0.01)
shader_parameter/noise_texture = SubResource("NoiseTexture2D_7m1hr")

[node name="Main" type="Node"]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.305882, 0.317647, 0.498039, 1)
script = ExtResource("1_osw0d")

[node name="Environment" type="Node" parent="CanvasModulate"]

[node name="Units" type="Node" parent="CanvasModulate"]

[node name="WaveManager" parent="CanvasModulate" node_paths=PackedStringArray("map_manager") instance=ExtResource("1_6yxuh")]
map_manager = NodePath("../MapManager")

[node name="CharacterManager" parent="CanvasModulate" node_paths=PackedStringArray("units", "item_manager", "map_manager") instance=ExtResource("2_rdbr4")]
units = NodePath("../Units")
item_manager = NodePath("../ItemManager")
map_manager = NodePath("../MapManager")

[node name="RoundManager" parent="CanvasModulate" instance=ExtResource("3_s7syv")]

[node name="AbilityManager" parent="CanvasModulate" node_paths=PackedStringArray("cm") instance=ExtResource("5_d0xog")]
cm = NodePath("../CombatManager")

[node name="MapManager" parent="CanvasModulate" node_paths=PackedStringArray("im") instance=ExtResource("5_rckfc")]
im = NodePath("../ItemManager")

[node name="CombatManager" parent="CanvasModulate" node_paths=PackedStringArray("map_manager", "ability_manager") instance=ExtResource("6_cvaja")]
explosion_effect = ExtResource("8_x8nt6")
map_manager = NodePath("../MapManager")
ability_manager = NodePath("../AbilityManager")

[node name="UI" type="CanvasLayer" parent="CanvasModulate"]

[node name="InteractionManager" parent="CanvasModulate" instance=ExtResource("7_nglgl")]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="CanvasModulate"]
spawn_path = NodePath("../Units")
spawn_limit = 2

[node name="CinematicManager" type="Node" parent="CanvasModulate"]
script = ExtResource("22_beavb")
boss_encounter_text = ExtResource("23_vhcc8")

[node name="ItemManager" parent="CanvasModulate" instance=ExtResource("11_r5jx1")]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -2

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1920, 1080)

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer"]
material = SubResource("ShaderMaterial_cxvlt")
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="ParallaxBackground" parent="."]
layer = -3

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2(1920, 1080)

[node name="ColorRect2" type="ColorRect" parent="Background/ParallaxLayer"]
z_as_relative = false
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Objects" type="Node" parent="."]

[node name="Combat Layer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[connection signal="get_units" from="CanvasModulate/WaveManager" to="CanvasModulate/MapManager" method="_on_get_units"]
[connection signal="next_sub_wave" from="CanvasModulate/WaveManager" to="CanvasModulate/MapManager" method="_start_sub_wave"]
[connection signal="respawn_creatures" from="CanvasModulate/WaveManager" to="CanvasModulate/MapManager" method="_respawn_creatures"]
[connection signal="start_boss" from="CanvasModulate/WaveManager" to="CanvasModulate/MapManager" method="_start_boss_encounter"]
[connection signal="start_boss" from="CanvasModulate/WaveManager" to="CanvasModulate/CombatManager" method="_on_start_wave"]
[connection signal="start_wave" from="CanvasModulate/WaveManager" to="CanvasModulate/MapManager" method="_on_wave_manager_start_wave"]
[connection signal="start_wave" from="CanvasModulate/WaveManager" to="CanvasModulate/CombatManager" method="_on_start_wave"]
[connection signal="stop_sub_wave" from="CanvasModulate/WaveManager" to="CanvasModulate/RoundManager" method="_on_stop_sub_wave"]
[connection signal="stop_wave" from="CanvasModulate/WaveManager" to="CanvasModulate/RoundManager" method="_on_stop_wave"]
[connection signal="stop_wave" from="CanvasModulate/WaveManager" to="CanvasModulate/CombatManager" method="_on_stop_wave"]
[connection signal="unit_dead" from="CanvasModulate/WaveManager" to="CanvasModulate/MapManager" method="_on_creature_dead"]
[connection signal="character_selected" from="CanvasModulate/CharacterManager" to="CanvasModulate/RoundManager" method="_on_character_selected"]
[connection signal="character_selected" from="CanvasModulate/CharacterManager" to="CanvasModulate/AbilityManager" method="_on_character_selected"]
[connection signal="character_selected" from="CanvasModulate/CharacterManager" to="CanvasModulate/MapManager" method="_on_character_selected"]
[connection signal="character_selected" from="CanvasModulate/CharacterManager" to="CanvasModulate/CombatManager" method="_on_character_selected"]
[connection signal="character_selected" from="CanvasModulate/CharacterManager" to="CanvasModulate/ItemManager" method="_on_character_manager_character_selected"]
[connection signal="start_round_manager" from="CanvasModulate/CharacterManager" to="CanvasModulate/RoundManager" method="_on_start_round_manager"]
[connection signal="next_choice" from="CanvasModulate/RoundManager" to="CanvasModulate/AbilityManager" method="_on_next_choice"]
[connection signal="next_wave" from="CanvasModulate/RoundManager" to="CanvasModulate/WaveManager" method="_on_next_wave"]
[connection signal="start_encounter" from="CanvasModulate/RoundManager" to="CanvasModulate/WaveManager" method="_on_round_manager_start_encounter"]
[connection signal="start_singleplayer" from="CanvasModulate/RoundManager" to="CanvasModulate/MapManager" method="_on_round_manager_start_singleplayer"]
[connection signal="curse_picked" from="CanvasModulate/AbilityManager" to="CanvasModulate/WaveManager" method="_on_ability_manager_curse_picked"]
[connection signal="curse_picked" from="CanvasModulate/AbilityManager" to="CanvasModulate/RoundManager" method="_on_ability_manager_curse_picked"]
[connection signal="enchant_picked" from="CanvasModulate/AbilityManager" to="CanvasModulate/RoundManager" method="_on_ability_manager_enchantment_picked"]
[connection signal="picked" from="CanvasModulate/AbilityManager" to="CanvasModulate/RoundManager" method="_on_ability_manager_picked"]
[connection signal="changing_map" from="CanvasModulate/MapManager" to="CanvasModulate/InteractionManager" method="_on_changing_map"]
[connection signal="start_boss_cinematic" from="CanvasModulate/MapManager" to="CanvasModulate/CinematicManager" method="_start_cinematic"]
[connection signal="used_creatures" from="CanvasModulate/MapManager" to="CanvasModulate/WaveManager" method="_on_map_manager_used_creatures"]
[connection signal="call_wave_manager" from="CanvasModulate/InteractionManager" to="CanvasModulate/RoundManager" method="_next_area"]
